--- a/app/src/main/res/drawable/ic_person.xml
+++ b/app/src/main/res/drawable/ic_person.xml
@@ -1,4 +1,10 @@
-<vector android:height="24dp" android:viewportHeight="512"
-    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M437.02,330.98c-27.883,-27.882 -61.071,-48.523 -97.281,-61.018C378.521,243.251 404,198.548 404,148C404,66.393 337.607,0 256,0S108,66.393 108,148c0,50.548 25.479,95.251 64.262,121.962c-36.21,12.495 -69.398,33.136 -97.281,61.018C26.629,379.333 0,443.62 0,512h40c0,-119.103 96.897,-216 216,-216s216,96.897 216,216h40C512,443.62 485.371,379.333 437.02,330.98zM256,256c-59.551,0 -108,-48.448 -108,-108S196.449,40 256,40c59.551,0 108,48.448 108,108S315.551,256 256,256z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24"
+    android:tint="#000000">
+  <path
+      android:fillColor="@android:color/white"
+      android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
 </vector>
