--- a/app/src/main/res/layout/fragment_tour.xml
+++ b/app/src/main/res/layout/fragment_tour.xml
@@ -495,20 +495,25 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <Button
-                    android:id="@+id/createEvent"
+                <com.dd.processbutton.iml.ActionProcessButton
+                    android:id="@+id/makeEventBTN"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="50dp"
-                    android:background="@drawable/custom_btn"
-                    android:text="@string/create_event"
-                    android:textAlignment="center"
-                    android:textAllCaps="false"
-                    android:textColor="@color/colorYellow" />
-
+                    android:text="Make Event"
+                    android:textColor="@color/colorYellow"
+                    app:pb_colorComplete="@color/colorPrimaryDark"
+                    app:pb_colorError="@color/red_error"
+                    app:pb_colorNormal="@color/colorPrimaryDark"
+                    app:pb_colorPressed="@color/colorPrimaryDark"
+                    app:pb_colorProgress="@color/purple_progress"
+                    app:pb_cornerRadius="5dp"
+                    app:pb_textComplete="Make Event"
+                    app:pb_textError="Error"
+                    app:pb_textProgress="Finding Guide..." />
 
             </LinearLayout>
 
