--- a/app/src/main/res/layout/chat_item_with_reply.xml
+++ b/app/src/main/res/layout/chat_item_with_reply.xml
@@ -79,8 +79,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/replyerImage"
             android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/man" />
+            android:layout_height="30dp" />
 
         <TextView
             android:id="@+id/replyerName"
