commentbox and replybox problem solved also fixes some bugs and optimized

--- a/app/src/main/res/layout/activity_reply_box.xml
+++ b/app/src/main/res/layout/activity_reply_box.xml
@@ -127,7 +127,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/replyRecycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@id/inputLayout2"
         android:layout_below="@id/topRelativeLayout" />
 
