--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,7 +34,7 @@
     <color name="accent">#FF4081</color>
     <color name="darkPopUp">#2f333f</color>
     <color name="red">@android:color/holo_red_light</color>
-
+    <color name="gray">	#808080</color>
     <color name="ashes">#CCCACA</color>
 
 </resources>
