--- a/app/src/main/res/layout/items_for_cardview.xml
+++ b/app/src/main/res/layout/items_for_cardview.xml
@@ -14,8 +14,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="25dp"
         app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="20dp"
-        app:cardUseCompatPadding="false">
+        app:cardCornerRadius="20dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
