commentbox and replybox problem solved also fixes some bugs and optimized

--- a/app/src/main/res/layout/items_for_cardview.xml
+++ b/app/src/main/res/layout/items_for_cardview.xml
@@ -14,7 +14,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="25dp"
         app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="20dp">
+        app:cardCornerRadius="20dp"
+        app:cardUseCompatPadding="false">
 
         <RelativeLayout
             android:layout_width="match_parent"
