--- a/app/src/main/res/layout/guide_chat_item_left.xml
+++ b/app/src/main/res/layout/guide_chat_item_left.xml
@@ -1,41 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:id="@+id/chatLayout"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
-    android:padding="5dp">
+    android:padding="1dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/chat_profileImage"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:src="@drawable/man"
-        android:layout_above="@+id/chatTimeTV" />
+        android:layout_above="@+id/chatTimeTV"
+        android:src="@drawable/man" />
 
     <TextView
         android:id="@+id/showMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="this is a test for guid chat. this is guid ashfjhf fsd fsd fsdh ffhsd fsd hfsdjfh sdjf hjksd hfjksdh fhsdjhfds hfjsdhfjs dfsdf dsfsdf hsd"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
         android:layout_marginStart="5dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="40dp"
         android:layout_toEndOf="@+id/chat_profileImage"
         android:background="@drawable/guide_chat_bg_left"
-        android:padding="8dp" />
+        android:padding="8dp"
+        android:text="this is a test for guid chat. this is guid ashfjhf fsd fsd fsdh ffhsd fsd hfsdjfh sdjf hjksd hfjksdh fhsdjhfds hfjsdhfjs dfsdf dsfsdf hsd"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/chatTimeTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/showMessage"
-        android:text="now"
         android:layout_alignParentEnd="false"
         android:layout_marginStart="50dp"
+        android:text="now"
         android:textColor="@color/color1"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
 
 </RelativeLayout>
