--- a/app/src/main/res/layout/activity_comments_box.xml
+++ b/app/src/main/res/layout/activity_comments_box.xml
@@ -148,7 +148,7 @@
         android:padding="5dp"
         android:weightSum="5">
 
-        <EditText
+        <com.example.tureguideversion1.MyEditText
             android:id="@+id/commentET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
