--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -41,6 +41,13 @@
                 android:layout_below="@+id/senderName"
                 android:textColor="@android:color/black"
                 android:textSize="18sp" />
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:layout_below="@+id/senderName" />
+
         </RelativeLayout>
 
         <TextView
