--- a/app/src/main/res/layout/chat_item_with_reply.xml
+++ b/app/src/main/res/layout/chat_item_with_reply.xml
@@ -41,6 +41,13 @@
                 android:layout_below="@+id/senderName"
                 android:textColor="@android:color/black"
                 android:textSize="18sp" />
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:layout_below="@+id/senderName" />
+
         </RelativeLayout>
 
         <TextView
@@ -101,6 +108,13 @@
             android:textColor="#000000" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/replyImage"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp"
+        android:layout_below="@id/replyLayoutView"
+        android:layout_marginStart="80dp" />
 
 
 </RelativeLayout>
