--- a/app/src/main/res/layout/reply_item_design.xml
+++ b/app/src/main/res/layout/reply_item_design.xml
@@ -41,6 +41,13 @@
                 android:layout_below="@+id/senderName2"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:layout_below="@+id/senderName2" />
+
         </RelativeLayout>
 
         <TextView
