--- a/app/src/main/res/layout/guide_chat_item_left.xml
+++ b/app/src/main/res/layout/guide_chat_item_left.xml
@@ -14,6 +14,23 @@
         android:layout_above="@+id/chatTimeTV"
         android:src="@drawable/man" />
 
+    <RelativeLayout
+        android:id="@+id/crl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_toEndOf="@+id/chat_profileImage"
+        android:background="@drawable/chat_background_left"
+        android:padding="8dp">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:layout_marginStart="5dp"/>
+
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/showMessage"
         android:layout_width="wrap_content"
