--- a/app/src/main/res/layout/chat_item_image.xml
+++ b/app/src/main/res/layout/chat_item_image.xml
@@ -34,13 +34,11 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/showMessage"
+            <ImageView
+                android:id="@+id/image"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/senderName"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:layout_height="200dp"
+                android:layout_below="@+id/senderName" />
 
         </RelativeLayout>
 
@@ -66,42 +64,6 @@
             tools:visibility="visible" />
 
     </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/replyLayoutView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/mainCommentLayout"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal"
-        tools:visibility="visible">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/replyerImage"
-            android:layout_width="30dp"
-            android:layout_height="30dp" />
-
-        <TextView
-            android:id="@+id/replyerName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="5dp"
-            android:textColor="#000000"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/replyerComment"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="5dp"
-            android:layout_weight="1"
-            android:inputType="textLongMessage|textFilter"
-            android:textColor="#000000" />
-
-    </LinearLayout>
 
 
 </RelativeLayout>
