--- a/app/src/main/res/layout/chat_item_image_with_reply.xml
+++ b/app/src/main/res/layout/chat_item_image_with_reply.xml
@@ -34,13 +34,11 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/showMessage"
+            <ImageView
+                android:id="@+id/image"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/senderName"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:layout_height="200dp"
+                android:layout_below="@+id/senderName" />
 
         </RelativeLayout>
 
