--- a/app/src/main/res/layout/chat_item_with_reply_image.xml
+++ b/app/src/main/res/layout/chat_item_with_reply_image.xml
@@ -91,17 +91,14 @@
             android:textColor="#000000"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/replyerComment"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="5dp"
-            android:layout_weight="1"
-            android:inputType="textLongMessage|textFilter"
-            android:textColor="#000000" />
-
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/replyImage"
+        android:layout_width="wrap_content"
+        android:layout_height="120dp"
+        android:layout_below="@id/replyLayoutView"
+        android:layout_marginStart="80dp" />
 
 
 </RelativeLayout>
