--- a/app/src/main/res/layout/fragment_ongoing_tour.xml
+++ b/app/src/main/res/layout/fragment_ongoing_tour.xml
@@ -108,13 +108,17 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/createTourBTN"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="16dp"
         android:layout_toStartOf="@id/createTourBTN"
         android:layout_toEndOf="@id/inboxBTN"
+        android:background="@drawable/chat_background_left"
+        android:backgroundTint="@color/colorYellow"
         android:gravity="center"
         android:text="Empty Inbox..."
         android:textAlignment="center"
-        android:textColor="@color/gray"
+        android:textColor="@color/colorPrimaryDark"
         android:visibility="gone" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
