--- a/app/src/main/res/layout/guide_chat_image_right.xml
+++ b/app/src/main/res/layout/guide_chat_image_right.xml
@@ -11,29 +11,33 @@
         android:id="@+id/chat_profileImage"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_alignBottom="@id/showMessage"
+        android:layout_alignBottom="@id/crl"
         android:layout_alignParentEnd="true"
         android:src="@drawable/man" />
 
-    <TextView
-        android:id="@+id/showMessage"
+    <RelativeLayout
+        android:id="@+id/crl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
         android:layout_marginEnd="5dp"
         android:layout_toStartOf="@+id/chat_profileImage"
-        android:background="@drawable/guide_chat_bg_right"
+        android:background="@drawable/chat_background_left"
         android:backgroundTint="@color/orange"
-        android:padding="8dp"
-        android:text="this is a test for guid chat. this is guid ashfjhf fsd fsd fsdh ffhsd fsd hfsdjfh sdjf hjksd hfjksdh fhsdjhfds hfjsdhfjs dfsdf dsfsdf hsd"
-        android:textColor="@android:color/background_dark"
-        android:textSize="18sp" />
+        android:padding="8dp">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:layout_marginStart="5dp"/>
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/chatTimeTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/showMessage"
+        android:layout_below="@id/crl"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="50dp"
         android:text="now"
