--- a/app/src/main/res/layout/guide_chat_item_left.xml
+++ b/app/src/main/res/layout/guide_chat_item_left.xml
@@ -11,25 +11,9 @@
         android:id="@+id/chat_profileImage"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_above="@+id/chatTimeTV"
+        android:layout_alignBottom="@id/showMessage"
+        android:layout_alignParentStart="true"
         android:src="@drawable/man" />
-
-    <RelativeLayout
-        android:id="@+id/crl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_toEndOf="@+id/chat_profileImage"
-        android:background="@drawable/chat_background_left"
-        android:padding="8dp">
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:layout_marginStart="5dp"/>
-
-    </RelativeLayout>
 
     <TextView
         android:id="@+id/showMessage"
@@ -39,9 +23,10 @@
         android:layout_marginEnd="40dp"
         android:layout_toEndOf="@+id/chat_profileImage"
         android:background="@drawable/guide_chat_bg_left"
+        android:backgroundTint="#E1EAE8E8"
         android:padding="8dp"
         android:text="this is a test for guid chat. this is guid ashfjhf fsd fsd fsdh ffhsd fsd hfsdjfh sdjf hjksd hfjksdh fhsdjhfds hfjsdhfjs dfsdf dsfsdf hsd"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/background_dark"
         android:textSize="18sp" />
 
     <TextView
