--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -87,10 +87,11 @@
                                         android:orientation="vertical">
 
                                         <TextView
+                                            android:id="@+id/tourTV"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:fontFamily="@font/amarante"
-                                            android:text="19"
+                                            android:text="0"
                                             android:textColor="@android:color/black"
                                             android:textSize="18sp" />
 
@@ -113,10 +114,11 @@
                                         android:orientation="vertical">
 
                                         <TextView
+                                            android:id="@+id/ratingTV"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:fontFamily="@font/amarante"
-                                            android:text="4.5"
+                                            android:text="0.0"
                                             android:textColor="@android:color/black"
                                             android:textSize="18sp" />
 
@@ -139,10 +141,11 @@
                                         android:orientation="vertical">
 
                                         <TextView
+                                            android:id="@+id/eventTV"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:fontFamily="@font/amarante"
-                                            android:text="10"
+                                            android:text="0"
                                             android:textColor="@android:color/black"
                                             android:textSize="18sp" />
 
