--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -73,13 +73,14 @@
                     android:textColor="@android:color/black" />
 
                 <TextView
+                    android:id="@+id/navRating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="3dp"
                     android:layout_marginEnd="5dp"
                     android:gravity="center"
-                    android:text="4.5"
+                    android:text="0.0"
                     android:textColor="@android:color/black"
                     android:textSize="18sp" />
             </LinearLayout>
